packages/fuels-macros/tests/ui/abigen/unrecognized_attribute.stderr
error: Attribute 'unknown' not recognized! Expected one of: 'name', 'abi'.
 --> tests/ui/abigen/unrecognized_attribute.rs:6:5
  |
6 |     unknown = "something"
  |     ^^^^^^^
